Pull request #1986: AG-35687 Fixed custom filters section styles
Merge in EXTENSIONS/browser-extension from fix/AG-35687 to v5.0

Squashed commit of the following:

commit 12eff472e19470373e64ab07d1eb6d73931d606e
Merge: 9166906e2 7ee831dfe
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Sep 24 18:41:07 2024 +0500

    Merge branch 'v5.0' into fix/AG-35687

commit 9166906e2ffaa3337b065ddde1a83dc6895082a9
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Sep 24 17:36:23 2024 +0500

    fix delete confirmation modal style

commit 74cebcc386cb04b0fb6f5bf1a468e45583f950e5
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Sep 24 17:01:36 2024 +0500

    fixed placeholder color

commit 858f2cadad0192c45be5d1afeb809571a9d9f3b2
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Tue Sep 24 16:54:50 2024 +0500

    fixed modal border radius

commit 5c0b7feba34abba0a3d8249a63eed451b4c93006
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 20:49:58 2024 +0500

    fixed formatting

commit 3551d510ebd443393fa45175f7119238fac7db33
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 20:22:15 2024 +0500

    removed unnecessary style

commit e5deeb73ee6b40cac2af5a534d196bfea5a21792
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 20:20:12 2024 +0500

    removed empty line

commit ad8d03e35ac769a332a3780c338c586a678e59eb
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 20:14:53 2024 +0500

    refactor focus style without js

commit 331aa7d2c4450175d117c562b56a1c9179cfbe99
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 20:02:30 2024 +0500

    fix styles file name

commit ccd560a0a1cadcb30b7831d067f73e6aa86dc01a
Author: Kurbanali Ruslan <r.kurbanali@adguard.com>
Date:   Mon Sep 23 19:52:19 2024 +0500

    refactor moved ModalInput -> AddCustomInput

commit 1b0c255089d5a48093da15b7da8b1ff948e92665
Author: Kurbanali Ruslan <r.kurbanali

--- a/Extension/src/pages/options/components/Filters/Search/search.pcss
+++ b/Extension/src/pages/options/components/Filters/Search/search.pcss
@@ -1,5 +1,4 @@
 .search {
-    height: 40px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -11,6 +10,7 @@
 
     &--focused {
         background-color: var(--fills-inputs-input-background-disabled);
+        border-color: var(--stroke-inputs-inactive-input-stroke-default);
     }
 
     &__label {
@@ -21,16 +21,17 @@
     &__input {
         border: 0;
         background: none;
-        padding: 10px 8px 10px 16px;
+        padding: 16px 8px 16px 16px;
         outline: none;
         font-size: 14px;
+        line-height: 1.5;
         width: 100%;
 
         @media (min-width: 640px) {
             font-size: 16px;
         }
 
-        &:placeholder {
+        &::placeholder {
             opacity: 1;
             color: var(--text-placeholder-placeholder-disabled);
             font-size: 14px;
@@ -48,7 +49,7 @@
     &__select {
         @media (min-width: 640px) {
             padding-left: 16px;
-            margin-left: 20px;
+            margin-left: 16px;
             border-left: 1px solid var(--stroke-dividers-item-divider-default);
         }
 
