--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -241,6 +241,10 @@ label.checkbox-label {
                     padding: 16px 0 16px 16px;
                 }
             }
+
+            &--custom {
+              padding-bottom: 9px;
+            }
         }
     }
 
@@ -302,6 +306,10 @@ label.checkbox-label {
         display: flex;
         flex-direction: row;
         padding: 8px 16px 24px;
+        
+        &--custom {
+          padding-bottom: 8px;
+        }
     }
 }
 
@@ -320,7 +328,7 @@ label.checkbox-label {
         color: var(--text-main-text-main-default);
         font-size: 14px;
         font-weight: 600;
-        margin-left: 8px;
+        margin-left: 12px;
     }
 }
 
